{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 635,
  "lineage": "41771569-540c-6fda-8a58-18e1862b9f0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-nat-gateway-1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cca21fd97a0c9bca",
            "association_id": "eipassoc-0e63cf5a87919a128",
            "domain": "vpc",
            "id": "eipalloc-0cca21fd97a0c9bca",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00ada60f606290496",
            "private_dns": "ip-10-0-0-38.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.38",
            "public_dns": "ec2-13-215-7-104.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.7.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-nat-gateway-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-1",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-nat-gateway-2-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069de42ccc05d5358",
            "association_id": "eipassoc-0895648874457fd7c",
            "domain": "vpc",
            "id": "eipalloc-069de42ccc05d5358",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a7c36bc13a88cb20",
            "private_dns": "ip-10-0-0-80.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.80",
            "public_dns": "ec2-3-0-47-253.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.47.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-nat-gateway-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-2",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:internet-gateway/igw-026c1f377fcb1b1a7",
            "id": "igw-026c1f377fcb1b1a7",
            "owner_id": "727816232662",
            "tags": {
              "Name": "tf-public-gateway-1"
            },
            "tags_all": {
              "Name": "tf-public-gateway-1"
            },
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-be-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-be-alb/4f4feee71c24ef95",
            "arn_suffix": "app/tf-be-alb/4f4feee71c24ef95",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-be-alb-1932521493.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-be-alb/4f4feee71c24ef95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-be-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-040b0e6aa79066167"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03236bd2f43041aec"
              },
              {
                "subnet_id": "subnet-0c434dc25b51eac65"
              }
            ],
            "subnets": [
              "subnet-03236bd2f43041aec",
              "subnet-0c434dc25b51eac65"
            ],
            "vpc_id": "vpc-0e039ca2fb896ce77",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-fe-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-fe-alb/e15f8ddeb3e47277",
            "arn_suffix": "app/tf-fe-alb/e15f8ddeb3e47277",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-fe-alb-992958935.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-fe-alb/e15f8ddeb3e47277",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-fe-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e6f2d6aa6ef383aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03236bd2f43041aec"
              },
              {
                "subnet_id": "subnet-0c434dc25b51eac65"
              }
            ],
            "subnets": [
              "subnet-03236bd2f43041aec",
              "subnet-0c434dc25b51eac65"
            ],
            "vpc_id": "vpc-0e039ca2fb896ce77",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-be-alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-be-alb/4f4feee71c24ef95/a42907ddcf243b97",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-be-alb-target-group/ff6cc6403de7d799",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-be-alb/4f4feee71c24ef95/a42907ddcf243b97",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-be-alb/4f4feee71c24ef95",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-be-alb",
            "aws_lb_target_group.tf-be-alb-target-group",
            "aws_security_group.tf-BE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-be-alb-listener-to-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-be-alb/4f4feee71c24ef95/655bfb1bb1a47aa2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-be-alb-target-group/ff6cc6403de7d799",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-be-alb/4f4feee71c24ef95/655bfb1bb1a47aa2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-be-alb/4f4feee71c24ef95",
            "port": 3001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-be-alb",
            "aws_lb_target_group.tf-be-alb-target-group",
            "aws_security_group.tf-BE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-fe-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-fe-alb/e15f8ddeb3e47277/f65ab70432040ef0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-fe-alb-target-group/c3a97a144bf40acb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-fe-alb/e15f8ddeb3e47277/f65ab70432040ef0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:loadbalancer/app/tf-fe-alb/e15f8ddeb3e47277",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-fe-alb",
            "aws_lb_target_group.tf-fe-alb-target-group",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tf-fe-alb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-fe-alb-target-group/c3a97a144bf40acb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener-rule/app/tf-fe-alb/e15f8ddeb3e47277/f65ab70432040ef0/a888e6b662b526b7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener-rule/app/tf-fe-alb/e15f8ddeb3e47277/f65ab70432040ef0/a888e6b662b526b7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:listener/app/tf-fe-alb/e15f8ddeb3e47277/f65ab70432040ef0",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-fe-alb",
            "aws_lb_listener.tf-fe-alb-listener",
            "aws_lb_target_group.tf-fe-alb-target-group",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_subnet.tf-public-subnet-1",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-be-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-be-alb-target-group/ff6cc6403de7d799",
            "arn_suffix": "targetgroup/tf-be-alb-target-group/ff6cc6403de7d799",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-be-alb-target-group/ff6cc6403de7d799",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-be-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-fe-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-fe-alb-target-group/c3a97a144bf40acb",
            "arn_suffix": "targetgroup/tf-fe-alb-target-group/c3a97a144bf40acb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:727816232662:targetgroup/tf-fe-alb-target-group/c3a97a144bf40acb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-fe-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cca21fd97a0c9bca",
            "association_id": "eipassoc-0e63cf5a87919a128",
            "connectivity_type": "public",
            "id": "nat-0881eeab9d4cae8af",
            "network_interface_id": "eni-00ada60f606290496",
            "private_ip": "10.0.0.38",
            "public_ip": "13.215.7.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c434dc25b51eac65",
            "tags": {
              "Name": "tf-nat-gateway-1"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.tf-nat-gateway-1-eip",
            "aws_internet_gateway.tf-igw",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069de42ccc05d5358",
            "association_id": "eipassoc-0895648874457fd7c",
            "connectivity_type": "public",
            "id": "nat-04cff7f40bbddd782",
            "network_interface_id": "eni-0a7c36bc13a88cb20",
            "private_ip": "10.0.0.80",
            "public_ip": "3.0.47.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03236bd2f43041aec",
            "tags": {
              "Name": "tf-nat-gateway-2"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.tf-nat-gateway-2-eip",
            "aws_internet_gateway.tf-igw",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:route-table/rtb-05e616dcadc21ee2f",
            "id": "rtb-05e616dcadc21ee2f",
            "owner_id": "727816232662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0881eeab9d4cae8af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-rtb-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf-private-rtb-1",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tf-nat-gateway-1-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gateway-1",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:route-table/rtb-050143c1fb037d960",
            "id": "rtb-050143c1fb037d960",
            "owner_id": "727816232662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04cff7f40bbddd782",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-rtb-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf-private-rtb-2",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tf-nat-gateway-2-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gateway-2",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:route-table/rtb-0a539a2e3d3c2669a",
            "id": "rtb-0a539a2e3d3c2669a",
            "owner_id": "727816232662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026c1f377fcb1b1a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf-public-rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bde3025a7e40aa0",
            "route_table_id": "rtb-05e616dcadc21ee2f",
            "subnet_id": "subnet-0f6796dec5ad5ed53"
          },
          "dependencies": [
            "aws_eip.tf-nat-gateway-1-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gateway-1",
            "aws_route_table.tf-private-route-table-1",
            "aws_subnet.tf-private-subnet-1",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071bbdf9036b2ce39",
            "route_table_id": "rtb-050143c1fb037d960",
            "subnet_id": "subnet-0039686a0e066855e"
          },
          "dependencies": [
            "aws_eip.tf-nat-gateway-2-eip",
            "aws_internet_gateway.tf-igw",
            "aws_nat_gateway.tf-nat-gateway-2",
            "aws_route_table.tf-private-route-table-2",
            "aws_subnet.tf-private-subnet-2",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f32b8e625e328d",
            "route_table_id": "rtb-0a539a2e3d3c2669a",
            "subnet_id": "subnet-0c434dc25b51eac65"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.tf-public-route-table",
            "aws_subnet.tf-public-subnet-1",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080696f3df7383b68",
            "route_table_id": "rtb-0a539a2e3d3c2669a",
            "subnet_id": "subnet-03236bd2f43041aec"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.tf-public-route-table",
            "aws_subnet.tf-public-subnet-2",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-BE-ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-040b0e6aa79066167",
            "description": "Managed by Terraform - in from fe-ecs-sg, out to be-ecs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "out to be-ecs-sg",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d153e29410c63439"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "id": "sg-040b0e6aa79066167",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "in from fe-ecs-sg",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b169015014f1589"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "tf-BE-ALB-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-BE-ECS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-0d153e29410c63439",
            "description": "Managed by Terraform - in from be-alb-sg, out to db-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "out to db-sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da1672416fda83e8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0d153e29410c63439",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "in from be-alb-sg",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040b0e6aa79066167"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "tf-BE-ECS-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-0da1672416fda83e8",
            "description": "Managed by Terraform - in from be-ecs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0da1672416fda83e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "in from be-ecs-sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d153e29410c63439"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf-DB-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-FE-ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-0e6f2d6aa6ef383aa",
            "description": "Managed by Terraform - in from internet gateway, out to fe-ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "out to fe-ecs-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b169015014f1589"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e6f2d6aa6ef383aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "in from internet gateway, http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07eba534480b0af3c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "in from internet gateway, https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07eba534480b0af3c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tf-FE-ALB-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-FE-ECS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-04b169015014f1589",
            "description": "Managed by Terraform - in from fe-alb-sg, out to be-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "out to be-alb-sg",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040b0e6aa79066167"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "id": "sg-04b169015014f1589",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "in from fe-alb-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6f2d6aa6ef383aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-FE-ECS-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-IGW-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:security-group/sg-07eba534480b0af3c",
            "description": "Managed by Terraform - in from internet, out to fe-alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "out to fe-alb-sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6f2d6aa6ef383aa"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "out to fe-alb-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6f2d6aa6ef383aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-07eba534480b0af3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tf-IGW-SG",
            "name_prefix": "",
            "owner_id": "727816232662",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to fe-alb-sg",
            "from_port": 80,
            "id": "sgrule-1836951428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eba534480b0af3c",
            "security_group_rule_id": "sgr-02b98f9ffc75cda25",
            "self": false,
            "source_security_group_id": "sg-0e6f2d6aa6ef383aa",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to fe-alb-sg",
            "from_port": 443,
            "id": "sgrule-2075857956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eba534480b0af3c",
            "security_group_rule_id": "sgr-01fcd070d4130740d",
            "self": false,
            "source_security_group_id": "sg-0e6f2d6aa6ef383aa",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3187131301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07eba534480b0af3c",
            "security_group_rule_id": "sgr-0f891209fdbfd1555",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-040b0e6aa79066167",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress all",
            "from_port": 0,
            "id": "sgrule-3761084095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040b0e6aa79066167",
            "security_group_rule_id": "sgr-03d4afb083d6aa320",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-04b169015014f1589",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress all",
            "from_port": 0,
            "id": "sgrule-1820347885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b169015014f1589",
            "security_group_rule_id": "sgr-01395d5e749a4e056",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-0d153e29410c63439",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress all",
            "from_port": 0,
            "id": "sgrule-1562531414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d153e29410c63439",
            "security_group_rule_id": "sgr-06b8fade47b1ea149",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-0da1672416fda83e8",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress all",
            "from_port": 0,
            "id": "sgrule-1913528687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da1672416fda83e8",
            "security_group_rule_id": "sgr-032e2c42b9e77c77b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-0e6f2d6aa6ef383aa",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress all",
            "from_port": 0,
            "id": "sgrule-2044087317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-085bed3da7cd24d1c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-040b0e6aa79066167",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP inbound",
            "from_port": 80,
            "id": "sgrule-3495730725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040b0e6aa79066167",
            "security_group_rule_id": "sgr-0551e6c987f693586",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-04b169015014f1589",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP inbound",
            "from_port": 80,
            "id": "sgrule-1437926182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b169015014f1589",
            "security_group_rule_id": "sgr-0ec7032f624fedc72",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-07eba534480b0af3c",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP inbound",
            "from_port": 80,
            "id": "sgrule-73125313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eba534480b0af3c",
            "security_group_rule_id": "sgr-08a236dfc6c155fca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-0e6f2d6aa6ef383aa",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP inbound",
            "from_port": 80,
            "id": "sgrule-3871747849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-00dbc8ec48bc95122",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-https-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-040b0e6aa79066167",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS inbound",
            "from_port": 443,
            "id": "sgrule-1499978762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040b0e6aa79066167",
            "security_group_rule_id": "sgr-0a9cf4dde8dced8c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-07eba534480b0af3c",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS inbound",
            "from_port": 443,
            "id": "sgrule-2434219691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07eba534480b0af3c",
            "security_group_rule_id": "sgr-0e68b28f46d8373f4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        },
        {
          "index_key": "sg-0e6f2d6aa6ef383aa",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS inbound",
            "from_port": 443,
            "id": "sgrule-3694133796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-04be9303c88cb6aff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_be-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from fe-ecs-sg",
            "from_port": 3001,
            "id": "sgrule-3902391238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040b0e6aa79066167",
            "security_group_rule_id": "sgr-03b5cf40071adf80d",
            "self": false,
            "source_security_group_id": "sg-04b169015014f1589",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_be-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from be-alb-sg",
            "from_port": 3001,
            "id": "sgrule-17498083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d153e29410c63439",
            "security_group_rule_id": "sgr-00590487cc9185671",
            "self": false,
            "source_security_group_id": "sg-040b0e6aa79066167",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from be-ecs-sg",
            "from_port": 3306,
            "id": "sgrule-461601461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da1672416fda83e8",
            "security_group_rule_id": "sgr-099693d0442b13524",
            "self": false,
            "source_security_group_id": "sg-0d153e29410c63439",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_fe-alb-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from internet gateway, http",
            "from_port": 80,
            "id": "sgrule-4028085937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-07deb0a7c2bcfae57",
            "self": false,
            "source_security_group_id": "sg-07eba534480b0af3c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_fe-alb-sg-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from internet gateway, https",
            "from_port": 443,
            "id": "sgrule-2647398629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-05f00e828f6a22892",
            "self": false,
            "source_security_group_id": "sg-07eba534480b0af3c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-IGW-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-in_fe-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "in from fe-alb-sg",
            "from_port": 80,
            "id": "sgrule-2571624573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b169015014f1589",
            "security_group_rule_id": "sgr-0c5c7737074d96bc9",
            "self": false,
            "source_security_group_id": "sg-0e6f2d6aa6ef383aa",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-ingress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-04b169015014f1589",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress all",
            "from_port": 0,
            "id": "sgrule-1557478876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b169015014f1589",
            "security_group_rule_id": "sgr-0cf3f8dbbc683147e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-out_be-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to be-ecs-sg",
            "from_port": 3001,
            "id": "sgrule-619209031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040b0e6aa79066167",
            "security_group_rule_id": "sgr-0102f8c29a01c91b4",
            "self": false,
            "source_security_group_id": "sg-0d153e29410c63439",
            "timeouts": null,
            "to_port": 3001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-BE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-out_be-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to db-sg",
            "from_port": 3306,
            "id": "sgrule-2307585349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d153e29410c63439",
            "security_group_rule_id": "sgr-042230d1cfa65ba9e",
            "self": false,
            "source_security_group_id": "sg-0da1672416fda83e8",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ECS-SG",
            "aws_security_group.tf-DB-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-out_fe-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to fe-ecs-sg",
            "from_port": 80,
            "id": "sgrule-3191045450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6f2d6aa6ef383aa",
            "security_group_rule_id": "sgr-0350eb3d0fd5fb5a3",
            "self": false,
            "source_security_group_id": "sg-04b169015014f1589",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-FE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf-out_fe-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "out to be-alb-sg",
            "from_port": 3001,
            "id": "sgrule-2915909161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b169015014f1589",
            "security_group_rule_id": "sgr-024657f27e1b2c981",
            "self": false,
            "source_security_group_id": "sg-040b0e6aa79066167",
            "timeouts": null,
            "to_port": 3001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-BE-ALB-SG",
            "aws_security_group.tf-FE-ECS-SG",
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:subnet/subnet-0f6796dec5ad5ed53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6796dec5ad5ed53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727816232662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-private-subnet-1"
            },
            "tags_all": {
              "Name": "tf-private-subnet-1"
            },
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:subnet/subnet-0039686a0e066855e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039686a0e066855e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727816232662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-private-subnet-2"
            },
            "tags_all": {
              "Name": "tf-private-subnet-2"
            },
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:subnet/subnet-0c434dc25b51eac65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c434dc25b51eac65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727816232662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-subnet-1"
            },
            "tags_all": {
              "Name": "tf-public-subnet-1"
            },
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:subnet/subnet-03236bd2f43041aec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03236bd2f43041aec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727816232662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-subnet-2"
            },
            "tags_all": {
              "Name": "tf-public-subnet-2"
            },
            "vpc_id": "vpc-0e039ca2fb896ce77"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-301"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc-301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:727816232662:vpc/vpc-0e039ca2fb896ce77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0541e7cb88939fa1a",
            "default_route_table_id": "rtb-0fc05ef985a0f24a8",
            "default_security_group_id": "sg-0d886365a7b26e141",
            "dhcp_options_id": "dopt-05ccf9c35c9a064d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e039ca2fb896ce77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc05ef985a0f24a8",
            "owner_id": "727816232662",
            "tags": {
              "Name": "tf-vpc-301"
            },
            "tags_all": {
              "Name": "tf-vpc-301"
            }
          }
        }
      ]
    }
  ]
}